# cbpf

./: Dockerfile  go.mod  probe-loader  start.sh
collector/: Makefile  go.mod  go.sum
collector/cmd/: main.go
collector/config/: config.yaml
collector/internal/: application.go  factory.go
collector/pkg/: receiver.go
collector/pkg/analyzer/: analyzer.go
collector/pkg/analyzer/network_analyzer/: config.go  datagroup_pool.go  message_pair.go  network_analyzer.go
collector/pkg/analyzer/tcp_analyzer/: tcp_analyzer.go
collector/pkg/analyzer/tcp_connect_analyzer/: config.go  connection_monitor.go  connection_stats.go  net_ip_socket.go  state_machine.go  tcp_connect_analyzer.go
collector/pkg/cgoreceiver/: cgoreceiver.go  config.go  metric.go
collector/pkg/consumer/: consumer.go
collector/pkg/consumer/k8s/: cache.go  config.go  constants.go  consumer.go  init.go  model.go
collector/pkg/consumer/k8s/watch/: node_watch.go
collector/pkg/consumer/processor/: processor.go
collector/pkg/consumer/processor/k8s/: cache.go  config.go  helper.go  hostport.go  init.go  (+7 more)
collector/pkg/exporter/: exporter.go
collector/pkg/exporter/otelexporter/: exporter.go
collector/pkg/model/: constant.go  data_group.go  event.go  event_helper.go
collector/pkg/receiver/cgoreceiver/: cgo_func.h  cgoreceiver.go  metric.go
collector/pkg/version/: version.go
probe/: CMakeLists.txt  build.sh
probe/cmake/modules/: agent-libs.cmake
probe/src/: CMakeLists.txt
probe/src/cgo/: cgo_func.cpp  cgo_func.h  constant.h  event.cpp  event.h  main.cpp  publisher.cpp  publisher.h
(+5 files in other folders)
